# edinburgh-protocol

./: Cargo.toml  LICENSE  README.md  config.toml.example
adapter-template/: Cargo.toml  README.md
adapter-template/src/: lib.rs
contracts/: foundry.toml
contracts/script/: DeployBase.s.sol  DeploySepolia.s.sol
contracts/src/: InvoiceNFT.sol  InvoiceVault.sol
contracts/test/: Integration.t.sol  InvoiceVault.t.sol
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/adapters/: page.tsx
dashboard/src/app/disbursements/: page.tsx
dashboard/src/app/invoices/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/components/: ActivityFeed.tsx  AdapterCard.tsx  AllocationPie.tsx  DisbursementTable.tsx  HealthGauge.tsx  InvoicePipeline.tsx  InvoiceTable.tsx  MetricCard.tsx  SentinelStatus.tsx  YieldChart.tsx
dashboard/src/lib/: api.ts
docs/plans/: 2026-03-10-m4-18-implementation.md
src/: config.rs  main.rs
src/domain/: engine.rs
src/gateway/: proxy.rs
src/orchestration/: enforcer.rs
src/store/: state.rs
src/store/migrations/: 004_vault_state.sql
tests/: adapter_test.rs  api_test.rs  cli_test.rs  compound_lending_test.rs  config_test.rs  dpga_test.rs  enforcer_test.rs  engine_test.rs  gateway_test.rs  init_test.rs  integration_test.rs  lineage_test.rs  liquid_staking_test.rs  patterns_test.rs  proxy_test.rs  router_test.rs  seed_test.rs  sentinel_test.rs  state_test.rs
