[package]
name = "impactvault"
version = "0.1.0"
edition = "2024"
description = "Open-source risk-curated yield infrastructure for social impact"
license = "MIT"
repository = "https://github.com/fabio-rovai/ImpactVault"

[[bin]]
name = "impactvault"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (lineage API)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# WebSocket
tokio-tungstenite = "0.28"

# JSON Schema (needed for MCP tool parameter schemas)
schemars = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Blockchain
alloy = { version = "1", features = ["providers", "contract", "signers", "network"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
axum-test = "19"
